src/objects/ER_Product_Dependency__c.object
<CustomObject>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <defaultValue>$User.ER_BUText__c</defaultValue>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Business_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Configuration__c</fullName>
        <label>Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Incompatible</fullName>
                </value>
                <value>
                    <fullName>AutoLink</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Controlling_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Controlling Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Dependent Products</relationshipLabel>
        <relationshipName>ER_Product_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Dependent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Controller products</relationshipLabel>
        <relationshipName>ER_Product_Controllers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Dependency</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ER_Controlling_Product__c</columns>
        <columns>ER_Dependent_Product__c</columns>
        <columns>ER_Configuration__c</columns>
        <columns>ER_Business_Unit__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ERHU_Products_dependencies</fullName>
        <columns>NAME</columns>
        <columns>ER_Controlling_Product__c</columns>
        <columns>ER_Dependent_Product__c</columns>
        <columns>ER_Configuration__c</columns>
        <columns>ER_Business_Unit__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Business_Unit__c</field>
            <operation>equals</operation>
            <value>HU</value>
        </filters>
        <label>Hungary Products dependencies</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>HUN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ERPL_Products_dependencies</fullName>
        <columns>NAME</columns>
        <columns>ER_Controlling_Product__c</columns>
        <columns>ER_Dependent_Product__c</columns>
        <columns>ER_Configuration__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Business_Unit__c</field>
            <operation>equals</operation>
            <value>PL</value>
        </filters>
        <label>Poland Products dependencies</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Poland</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ERSK_products_dependencies</fullName>
        <columns>NAME</columns>
        <columns>ER_Controlling_Product__c</columns>
        <columns>ER_Dependent_Product__c</columns>
        <columns>ER_Configuration__c</columns>
        <columns>ER_Business_Unit__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Business_Unit__c</field>
            <operation>equals</operation>
            <value>SK</value>
        </filters>
        <label>Slovakia products dependencies</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Slovakia</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Product Dependency</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Dependencies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>